--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MyPkg"
 uuid = "3cd6a54d-731d-4dbf-b781-4276fd20a30f"
 authors = ["Jürgen Fuhrmann <juergen-fuhrmann@web.de> and contributors"]
-version = "1.0.0-DEV"
+version = "1.1"
 
 [compat]
 julia = "1.10"
